Fix blocker bug #85703.  Crashes on popup windows.  r=adamlock,sr=tor,a=asa